Bug 113159 - Pivot table: tabular mode is converted to oultine mode after RT XLSX in Calc
Summary: Pivot table: tabular mode is converted to oultine mode after RT XLSX in Calc
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:6.0.0
Keywords:
Depends on:
Blocks: Pivot-Table-XLSX
  Show dependency treegraph
 
Reported: 2017-10-16 19:03 UTC by Tamás Zolnai
Modified: 2017-10-28 13:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
A pivot table in tabular mode (16.88 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2017-10-16 19:04 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-10-16 19:03:52 UTC
Description:
In MSO there are three layout modes fro pivot tables. LO supports two of them (tabular and outline mode). However XLSX export always export outline mode, so after an RT in Calc the layout changes.

Steps to Reproduce:
1. Open attached test document (XLSX), with a pivot table in tabular mode
2. Save back to XLSX
3a. Open in Calc -> layout changes
3b. Open in Excel and refresh pivot table -> layout changes

Actual Results:  
Pivot table tabular mode is converted to outline mode after an RT in Calc.

Expected Results:
Since tabular mode is imported, it should be exported too.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/61.0.3163.100 Safari/537.36
Comment 1 Tamás Zolnai 2017-10-16 19:04:08 UTC
Created attachment 137018 [details]
A pivot table in tabular mode
Comment 2 Tamás Zolnai 2017-10-16 19:04:57 UTC
Splitted from bug 89139. There you can see also some screenshots.
Comment 3 Commit Notification 2017-10-19 12:40:41 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8cf0b4b4cd748094889a6a9ac6883dd457113b74

tdf#113159: Pivot table: tabular mode is converted to oultine mode

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gerhard Schaber 2017-10-20 20:57:04 UTC
Looks much better now. Thanks.

The only difference is now that after a refresh there is a expand/collapse button in each cell.
Comment 5 Tamás Zolnai 2017-10-27 17:28:22 UTC
(In reply to Gerhard Schaber from comment #4)
> Looks much better now. Thanks.
> 
> The only difference is now that after a refresh there is a expand/collapse
> button in each cell.

Yes, I also see this issue. Excel has these buttons, with which you can make the layout a bit more compact, but LO Calc doesn't support such buttons neither in runtime or by export to file formats. So it might be a good idea to create an other bug report about these buttons. It's independent from the layout mode (e.g. outline vs tabular vs compact), so not part of this bug report.
Comment 6 Gerhard Schaber 2017-10-28 13:13:11 UTC
LOP might not support those buttons, but it adds them when storing the file.