tdf#113159: Pivot table: tabular mode is converted to oultine mode

... after RT XLSX in Calc

Change-Id: I9725ca55aed973133db1d5fe47463575148e00b8